data/derived/sp14/progs/unify/prog3104.ml.out
Characters 115-132:
  if !(List.mem h seen) then h::seen
      ^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a ref
